--- a/source/Index.html
+++ b/source/Index.html
@@ -48,10 +48,12 @@
     <main class="page-main">
       <section class="promo">
         <h1 class="promo__title">Путешествие по Европе</h1>
-        <p class="promo__text">В этом туре вы откроете для себя Европу в новом свете.
-          Вас ждет: море, горы, а также потрясающая красота природы.
-        </p>
-        <a class="promo__link" href="#">Смотреть тур</a>
+        <div class="promo__wrapper">
+          <p class="promo__text">В этом туре вы откроете для себя Европу в новом свете.
+            Вас ждет: море, горы, а также потрясающая красота природы.
+          </p>
+          <a class="promo__link" href="#">Смотреть тур</a>
+        </div>
       </section>
 
       <section class="places" id="places">
