Сверстан блок страны для свайпа. Сделать сам свайп

--- a/source/Index.html
+++ b/source/Index.html
@@ -121,7 +121,7 @@
           <div class="container">
             <ul class="countries__nav">
               <li class="countries__nav-item">
-                <span class="countries__nav-text">Греция</span>
+                <span class="countries__nav-text countries__nav-text--active">Греция</span>
               </li>
               <li class="countries__nav-item">
                 <span class="countries__nav-text">Албания</span>
@@ -137,29 +137,159 @@
               </li>
             </ul>
           </div>
-          <div class="countries__item country">
-            <div class="country__wrapper">
-              <h2 class="country__title">Греция</h2>
-              <p class="country__text">На севере Греции находится один из крупнейших комплексов монастырей,
-                расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе».
-                Этот монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника
-                и обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота
-                природы и атмосфера, царящая в монастырях Метеоры.
-              </p>
-              <a class="country__link" href="#">Купить тур сейчас</a>
-            </div>
-            <div class="country__feedbacks feedbacks">
-              <p class="feedbacks__title">Отзывы</p>
-              <p class="feedbacks__text">Метеоры в Греции можно сравнить разве что с Монсерратт в Испании.
-                Такие же высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах.
-                Ощущение такое, как будто стоишь на краю света!
-              </p>
-              <div class="feedbacks__user-wrapper">
-                <picture>
-                  <img class="feedbacks__user-photo" src="img/user_image.jpg" srcset="img/user_image@2x.jpg 2x" width="37" height="38"
-                  alt="Фото пользователя">
-                </picture>
-                <span class="feedbacks__user-name">Влада Голицина</span>
+
+          <div class="countries__swiper">
+            <div class="countries__swiper-wrapper">
+              <div class="countries__item country">
+                <div class="container container--country">
+                  <div class="country__wrapper">
+                    <h2 class="country__title">Греция</h2>
+                    <p class="country__text">На севере Греции находится один из крупнейших комплексов монастырей,
+                      расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе».
+                      Этот монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника
+                      и обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота
+                      природы и атмосфера, царящая в монастырях Метеоры.
+                    </p>
+                    <a class="country__link" href="#">Купить тур сейчас</a>
+                  </div>
+                  <div class="country__feedbacks feedbacks">
+                    <div class="feedbacks__background"></div>
+                    <div class="feedbacks__wrapper">
+                      <p class="feedbacks__title">Отзывы</p>
+                      <p class="feedbacks__text">Метеоры в Греции можно сравнить разве что с Монсерратт в Испании.
+                        Такие же высоченные скалы. Но здесь потрясает масштаб. Огромная территория, высоко в горах.
+                        Ощущение такое, как будто стоишь на краю света!
+                      </p>
+                      <div class="feedbacks__user-wrapper">
+                        <picture>
+                          <img class="feedbacks__user-photo" src="img/user_image.jpg" srcset="img/user_image@2x.jpg 2x" width="37" height="38"
+                          alt="Фото пользователя">
+                        </picture>
+                        <span class="feedbacks__user-name">Влада Голицина</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="countries__item country visually-hidden">
+                <div class="container container--country">
+                  <div class="country__wrapper">
+                    <h2 class="country__title">Албания</h2>
+                    <p class="country__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a class="country__link" href="#">Купить тур сейчас</a>
+                  </div>
+                  <div class="country__feedbacks feedbacks">
+                    <div class="feedbacks__background"></div>
+                    <div class="feedbacks__wrapper">
+                      <p class="feedbacks__title">Отзывы</p>
+                      <p class="feedbacks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                      </p>
+                      <div class="feedbacks__user-wrapper">
+                        <picture>
+                          <img class="feedbacks__user-photo" src="img/user_image.jpg" srcset="img/user_image@2x.jpg 2x" width="37" height="38"
+                          alt="Фото пользователя">
+                        </picture>
+                        <span class="feedbacks__user-name">Константин Константинопольский</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="countries__item country visually-hidden">
+                <div class="container container--country">
+                  <div class="country__wrapper">
+                    <h2 class="country__title">Македония</h2>
+                    <p class="country__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a class="country__link" href="#">Купить тур сейчас</a>
+                  </div>
+                  <div class="country__feedbacks feedbacks">
+                    <div class="feedbacks__background"></div>
+                    <div class="feedbacks__wrapper">
+                      <p class="feedbacks__title">Отзывы</p>
+                      <p class="feedbacks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                      </p>
+                      <div class="feedbacks__user-wrapper">
+                        <picture>
+                          <img class="feedbacks__user-photo" src="img/user_image.jpg" srcset="img/user_image@2x.jpg 2x" width="37" height="38"
+                          alt="Фото пользователя">
+                        </picture>
+                        <span class="feedbacks__user-name">Константин Константинопольский</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="countries__item country visually-hidden">
+                <div class="container container--country">
+                  <div class="country__wrapper">
+                    <h2 class="country__title">Черногория</h2>
+                    <p class="country__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a class="country__link" href="#">Купить тур сейчас</a>
+                  </div>
+                  <div class="country__feedbacks feedbacks">
+                    <div class="feedbacks__background"></div>
+                    <div class="feedbacks__wrapper">
+                      <p class="feedbacks__title">Отзывы</p>
+                      <p class="feedbacks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                      </p>
+                      <div class="feedbacks__user-wrapper">
+                        <picture>
+                          <img class="feedbacks__user-photo" src="img/user_image.jpg" srcset="img/user_image@2x.jpg 2x" width="37" height="38"
+                          alt="Фото пользователя">
+                        </picture>
+                        <span class="feedbacks__user-name">Константин Константинопольский</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="countries__item country visually-hidden">
+                <div class="container container--country">
+                  <div class="country__wrapper">
+                    <h2 class="country__title">Хорватия</h2>
+                    <p class="country__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a class="country__link" href="#">Купить тур сейчас</a>
+                  </div>
+                  <div class="country__feedbacks feedbacks">
+                    <div class="feedbacks__background"></div>
+                    <div class="feedbacks__wrapper">
+                      <p class="feedbacks__title">Отзывы</p>
+                      <p class="feedbacks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                      </p>
+                      <div class="feedbacks__user-wrapper">
+                        <picture>
+                          <img class="feedbacks__user-photo" src="img/user_image.jpg" srcset="img/user_image@2x.jpg 2x" width="37" height="38"
+                          alt="Фото пользователя">
+                        </picture>
+                        <span class="feedbacks__user-name">Константин Константинопольский</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
